# ds3-archipelago

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MIT-LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: release.yaml  test.yaml
release/: README.txt  launch-ds3.bat  launch-ds3.sh  me3-config.me3
src/: archipelago_client_wrapper.rs  archipelago_mod.rs  client.rs  clipboard_backend.rs  config.rs  core.rs  error_display.rs  item.rs  lib.rs  overlay.rs  paths.rs  preload.rs  save_data.rs  slot_data.rs  utils.rs
src/client/: connected.rs  connection.rs  game_data_wrapper.rs  item.rs
src/overlay/: text_input_history.rs
