[package]
name = "ds3-archipelago"
version = "4.0.0-alpha"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "archipelago"

[dependencies]
archipelago_rs = { path = "../archipelago_rs" }
bincode = "2.0.1"
chrono = "0.4.42"
clipboard-win = "5.4.1"
darksouls3 = { path = "../fromsoftware-rs/crates/darksouls3" }
fromsoftware-shared = { path = "../fromsoftware-rs/crates/shared" }
hudhook = "0.8.1"
imgui = { version = "0.12", features = ["docking", "tables-api"] }
json = { package = "serde_json", version = "1.0.145" }
log = "0.4.28"
pelite = "0.10"
serde = { version = "1.0.228", features = ["derive"] }
simplelog = "0.12.2"
tokio = { version = "1.47", features = ["macros", "rt", "sync"] }

[dependencies.windows]
version = "0.54"
features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
]
